Updated load manager and scripts using it (no need for files opsd_load_2015_2018.csv and so on anymore)

--- a/src/sizing/e-highways/config.yaml
+++ b/src/sizing/e-highways/config.yaml
@@ -18,7 +18,7 @@ time:
 
 # Space
 region: "EU"
-add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES technologies
+add_offshore: False # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
 res:
