--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -17,7 +17,7 @@ time:
   resolution: 1
 
 # Space
-region: "CWE"
+region: "EU"
 add_offshore: False # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
