--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -12,12 +12,12 @@ filtering_layers:
   water_mask: True
 
 timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
-regions: ['EU']
+regions: ['BENELUX']
 technologies: ['wind_onshore', 'wind_offshore', 'pv_utility']
 
 use_ex_cap: False
 
-modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
+modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
 solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
 solver_options:
   gurobi:
@@ -29,7 +29,7 @@ write_lp: False
 write_log: False
 
 # Type of problem to be solved. Check resite.py for a full list.
-formulation: 'meet_RES_targets_hourly' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
+formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
 
 # List of deployments per region (ordered as the 'regions' list above)
 deployment_vector: [0.1] # [0.5, 0.5, 0.5, 0.5]
