--- a/src/sizing/e-highways/config.yaml
+++ b/src/sizing/e-highways/config.yaml
@@ -35,8 +35,8 @@ res:
   # For strategy = full or generate
   # Various data layers to be taken into account in potential site selection.
   spatial_resolution: 0.5
-  technologies: ['wind_onshore', 'pv_utility', 'wind_offshore']
-  timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
+  technologies: ['wind_onshore', 'pv_utility', 'wind_offshore', 'pv_residential']
+  timeslice: ['2015-01-01T00:00', '2015-01-31T23:00']
   use_ex_cap: True
   limit_max_cap: True
   filtering_layers:
@@ -63,7 +63,7 @@ res:
   # Type of problem to be solved. Check resite.py for a full list.
   formulation: 'meet_RES_targets_hourly' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
   # List of deployments per region (ordered as the 'regions' list above)
-  deployment_vector: [0.3] # [0.5, 0.5, 0.5, 0.5]
+  deployment_vector: [0.1] # [0.5, 0.5, 0.5, 0.5]
   # Keeping files at the end of the run.
   keep_files: True
 
