Updated src.data.legacy.manager.py: change dict to pd.series and other files depending on it + some minor edits

--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -11,11 +11,11 @@ filtering_layers:
   forestry: True
   water_mask: True
 
-timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
+timeslice: ['2015-01-01T00:00', '2015-01-31T23:00']
 regions: ['BENELUX']
 technologies: ['wind_onshore', 'wind_offshore', 'pv_utility']
 
-use_ex_cap: False
+use_ex_cap: True
 
 modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
 solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
