Updated res.add_generators_per_bus: correct capacity factors for offshore technologies

--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -17,7 +17,7 @@ time:
   resolution: 1
 
 # Space
-region: "EU"
+region: "CWE"
 add_offshore: False # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
@@ -36,7 +36,7 @@ res:
   # For strategy = full or generate
   # Various data layers to be taken into account in potential site selection.
   spatial_resolution: 0.5
-  technologies: ['wind_offshore']
+  technologies: ['wind_offshore', 'wind_onshore']
   timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
   use_ex_cap: True
   limit_max_cap: False
