--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -26,8 +26,8 @@ res:
   include: True
   # Give which technology should be installed using each strategy
   strategies:
-    max: ['wind_onshore', 'wind_offshore']
-    comp: []
+    max: []
+    comp: ['wind_onshore', 'wind_offshore']
     no_siting: []
     siting: []
     bus: ['pv_residential', 'pv_utility']
@@ -37,8 +37,8 @@ res:
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-#    wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
-#    wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
+    wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
+    wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
 
   # For strategy = siting or no siting
   # Various data layers to be taken into account in potential site selection.
