--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -27,18 +27,18 @@ res:
   # Give which technology should be installed using each strategy
   strategies:
     max: []
-    comp: []
+    comp: ['wind_onshore', 'wind_offshore']
     no_siting: []
     siting: []
-    bus: ['pv_residential', 'pv_utility', 'wind_onshore', 'wind_offshore']
+    bus: ['pv_residential', 'pv_utility']
 
   # For strategy = max or comp
-  path: '20200412_105830'
+  path: '20200411_205036'
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-    wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
-    wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
+    # wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
+    # wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
 
   # For strategy = siting or no siting
   # Various data layers to be taken into account in potential site selection.
