--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -17,7 +17,7 @@ time:
   resolution: 1
 
 # Space
-region: "EU"
+region: "CWE"
 # TODO: remove?
 add_offshore: False # ! if False, remove wind_offshore and wind_floating from RES technologies
 
@@ -33,12 +33,12 @@ res:
     bus: ['pv_residential', 'pv_utility']
 
   # For strategy = max or comp
-  path: '20200411_205036'
+  path: '20200411_200814'
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-    # wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
-    # wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
+#     wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
+#     wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
 
   # For strategy = siting or no siting
   # Various data layers to be taken into account in potential site selection.
