Cleaned:  - population_density.manager  - res_potential.manager.get_capacity_potential_at_points

--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -12,8 +12,8 @@ filtering_layers:
   water_mask: True
 
 timeslice: ['2015-01-01T00:00', '2015-01-31T23:00']
-regions: ['BENELUX']
-technologies: ['wind_onshore', 'wind_offshore', 'pv_utility']
+regions: ['EU']
+technologies: ['wind_offshore', 'wind_onshore', 'pv_utility']
 
 use_ex_cap: True
 
