--- a/src/sizing/e-highways/config.yaml
+++ b/src/sizing/e-highways/config.yaml
@@ -13,7 +13,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2017-01-01T00:00', '2017-01-01T10:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T10:00']
   resolution: 1
 
 # Space
@@ -23,26 +23,28 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 # RES
 res:
   include: True
-  use_ex_cap: True
-  limit_max_cap: True
-
-  strategy: "siting" # (max or comp) or bus or no_siting or siting
-  modelling: 'gurobipy' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
-
+  # Give which technology should be installed using each strategy
+  strategies:
+    max: []
+    comp: []
+    no_siting: []
+    siting: []
+    bus: ['wind_offshore', 'wind_onshore', 'pv_utility']
 
   # For strategy = max or comp
+  path: '20200414_214108'
   resite_nb: 100 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-    wind_onshore: ""  # GW/km2
-    pv_utility: ""  # GW/km2
+    # wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
+    # wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
 
-  # For strategy = full or generate
+  # For strategy = siting or no siting
   # Various data layers to be taken into account in potential site selection.
   spatial_resolution: 0.5
-  technologies: ['wind_onshore', 'pv_utility', 'wind_offshore', 'pv_residential']
-  timeslice: ['2017-01-01T00:00', '2017-01-31T23:00']
-
+  timeslice: ['2015-01-01T00:00', '2015-01-01T23:00']
+  use_ex_cap: True
+  limit_max_cap: True
   filtering_layers:
     resource_quality: True
     population_density: True
@@ -52,14 +54,22 @@ res:
     forestry: True
     water_mask: True
 
-
+  # For strategy = siting
+  modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
+  solver: 'cplex' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
+  solver_options:
+    gurobi:
+      Threads: 0
+      Method: 1
+    cplex:
+      solutiontype: 1
+    cbc: 0
+  write_lp: False
+  write_log: False
   # Type of problem to be solved. Check resite.py for a full list.
-  formulation: 'meet_RES_targets_daily' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
+  formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
   # List of deployments per region (ordered as the 'regions' list above)
-  deployment_vector: [0.2] # [0.5, 0.5, 0.5, 0.5]
-
-  # For strategy = generate
-  write_lp: True
+  deployment_vector: [0.1] # [0.5, 0.5, 0.5, 0.5]
   # Keeping files at the end of the run.
   keep_files: True
 
