Resite: break the directory into two: resite (the module per say) and siting (test of the module), + clean the way output folder were generated

--- a/src/sizing/e-highways/config.yaml
+++ b/src/sizing/e-highways/config.yaml
@@ -28,8 +28,8 @@ res:
     max: []
     comp: []
     no_siting: []
-    siting: []
-    bus: ['wind_offshore', 'wind_onshore', 'pv_utility']
+    siting: ['wind_offshore', 'wind_onshore', 'pv_utility']
+    bus: []
 
   # For strategy = max or comp
   path: '20200414_214108'
