--- a/src/siting/config.yml
+++ b/src/siting/config.yml
@@ -11,8 +11,8 @@ filtering_layers:
   forestry: True
   water_mask: True
 
-timeslice: ['2015-01-01T00:00', '2015-01-31T23:00']
-regions: ['EU']
+timeslice: ['2015-01-01T00:00', '2015-01-01T23:00']
+regions: ['CWE']
 technologies: ['wind_offshore', 'wind_onshore', 'pv_utility']
 
 use_ex_cap: True
@@ -26,7 +26,6 @@ solver_options:
   cplex: 0
   cbc: 0
 write_lp: False
-write_log: False
 
 # Type of problem to be solved. Check resite.py for a full list.
 formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
