Resite: pyomo - starting cleaning the code by moving constraint and objective making functions to auxiliary file

--- a/src/siting/config.yaml
+++ b/src/siting/config.yaml
@@ -11,13 +11,13 @@ filtering_layers:
   forestry: True
   water_mask: True
 
-timeslice: ['2015-01-01T00:00', '2015-01-01T23:00']
-regions: ['CWE']
+timeslice: ['2015-01-01T00:00', '2015-01-31T23:00']
+regions: ['BENELUX']
 technologies: ['wind_offshore', 'wind_onshore', 'pv_utility']
 
 use_ex_cap: True
 
-modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
+modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
 # solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
 # solver_options:
 #  gurobi:
@@ -25,13 +25,10 @@ modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'doc
 #    Crossover: 0
 #  cplex: 0
 #  cbc: 0
-write_lp: False
+write_lp: True
 
 # Type of problem to be solved. Check resite.py for a full list.
-formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
+formulation: 'meet_demand_with_capacity' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
 
 # List of deployments per region (ordered as the 'regions' list above)
-deployment_vector: [0.1] # [0.5, 0.5, 0.5, 0.5]
-
-# Keeping files at the end of the run.
-keep_files: True
+deployment_vector: [0.5, 0.5, 0.5, 0.5]
