--- a/src/siting/config.yaml
+++ b/src/siting/config.yaml
@@ -17,7 +17,7 @@ technologies: ['wind_offshore', 'wind_onshore', 'pv_utility']
 
 use_ex_cap: True
 
-modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
+modelling: 'gurobipy' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
 # solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
 # solver_options:
 #  gurobi:
@@ -28,5 +28,5 @@ modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docpl
 write_lp: True
 
 # Type of problem to be solved. Check resite.py for a full list.
-formulation: 'meet_demand_with_capacity' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
-formulation_params: [0.5, 0.5, 0.5, 0.5]
+formulation: 'meet_RES_targets_daily' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
+formulation_params: [0.01]
