--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -13,11 +13,11 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-31T23:00']
   resolution: 1
 
 # Space
-region: "EU2"
+region: "EU"
 # add_offshore: False
 
 # RES
@@ -26,18 +26,18 @@ res:
   # Give which technology should be installed using each strategy
   strategies:
     max: []
-    comp: []
+    comp: ['wind_offshore']
     no_siting: []
     siting: []
-    bus: ['wind_offshore', 'wind_onshore', 'pv_residential', 'pv_utility']
+    bus: ['pv_residential', 'pv_utility', 'wind_onshore']
 
   # For strategy = max or comp
-  path: '20200414_214108'
+  path: 'EU_country_off_201518_08'
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-    # wind_onshore: 1  # MW/km2, assuming 10% max utilization of the entire cell area
-    # wind_offshore: 4 # MW/km2, assuming 40% max utilization of the entire cell area
+     wind_onshore: 3  # MW/km2, assuming 30% max utilization of the entire cell area
+     wind_offshore: 6 # MW/km2, assuming 60% max utilization of the entire cell area
 
   # For strategy = siting or no siting
   # Various data layers to be taken into account in potential site selection.
@@ -65,9 +65,12 @@ res:
       solutiontype: 1
     cbc: 0
   write_lp: False
+  write_log: False
   # Type of problem to be solved. Check resite.py for a full list.
   formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
   formulation_params: [0.1] # [0.5, 0.5, 0.5, 0.5]
+  # Keeping files at the end of the run.
+  keep_files: True
 
 # Conventional generation
 dispatch:
@@ -103,6 +106,10 @@ sto:
   use_ex_cap: True
   extendable: False
   cyclic_sof: True
+
+snsp:
+  include: False
+  share: 0.65
 
 # Emissions
 co2_emissions:
