--- a/src/parameters/pv_wind_tech_configs.yml
+++ b/src/parameters/pv_wind_tech_configs.yml
@@ -1,4 +1,5 @@
 # Config file for various conversion technologies.
+# TODO: modify clcs
 wind_onshore:
   converter_IV: 'V110'
   converter_III: 'V90'
@@ -11,12 +12,16 @@ wind_onshore:
   population_density_threshold_high: 100.
   protected_areas_selection: ['Ia', 'Ib', 'II']
   protected_areas_distance_threshold: 10.
-  depth_threshold_low: 0.
-  depth_threshold_high: 0.
   altitude_threshold: 1500.
   terrain_slope_threshold: 0.03
   forestry_ratio_threshold: 0.7
   legacy_min_capacity: 0.2
+  clc:
+    # Scholz, Y. (2012). Renewable energy based electricity supply at low costs:
+    #  development of the REMix model and application for Europe. ( p.42 / p.28)
+    keep_codes: [211, 212, 213, 221, 222, 223, 231, 241, 242, 243, 244, 311, 312, 313, 321, 322, 323, 324, 332, 333]
+    remove_codes: [111, 112, 121, 122, 123, 124]
+    remove_distance: 1000
 
 wind_offshore:
   converter_IV: 'V110'
@@ -26,15 +31,11 @@ wind_offshore:
   resource: 'wind'
   deployment: 'offshore'
   resource_threshold: 7. #m/s
-  population_density_threshold_low: 0.
-  population_density_threshold_high: 100.
   protected_areas_selection: ['Ia', 'Ib', 'II', 'V']
   protected_areas_distance_threshold: 5.
-  depth_threshold_low: 5.
-  depth_threshold_high: 59.
-  altitude_threshold: 0.
-  terrain_slope_threshold: 1.
-  forestry_ratio_threshold: 1.
+  depth_thresholds:
+    low: 5.
+    high: 59.
   legacy_min_capacity: 0.5
 
 wind_floating:
@@ -42,15 +43,11 @@ wind_floating:
   resource: 'wind'
   deployment: 'floating'
   resource_threshold: 9. #m/s
-  population_density_threshold_low: 0.
-  population_density_threshold_high: 100.
   protected_areas_selection: ['Ia', 'Ib', 'II', 'V']
   protected_areas_distance_threshold: 5.
-  depth_threshold_low: 60.
-  depth_threshold_high: 999.
-  altitude_threshold: 0.
-  terrain_slope_threshold: 1.
-  forestry_ratio_threshold: 1.
+  depth_thresholds:
+    low: 60.
+    high: 999.
 
 pv_utility:
   converter: 'DEG15MC'
@@ -61,12 +58,13 @@ pv_utility:
   population_density_threshold_high: 100.
   protected_areas_selection: ['Ia', 'Ib', 'II', 'V']
   protected_areas_distance_threshold: 5.
-  depth_threshold_low: 0.
-  depth_threshold_high: 0.
   altitude_threshold: 2000.
   terrain_slope_threshold: 0.05
   forestry_ratio_threshold: 0.8
   legacy_min_capacity: 0.05
+  clc:
+    # PyPSA-Eur
+    keep_codes: [111, 112, 121, 122, 123, 124, 131, 132, 133, 141, 142, 211, 212, 213, 221, 222, 223, 231, 241, 242, 321, 332, 333]
 
 pv_residential:
   converter: 'DD06M'
@@ -77,8 +75,6 @@ pv_residential:
   population_density_threshold_high: 999999.
   protected_areas_selection: ['Ia', 'Ib', 'II', 'V']
   protected_areas_distance_threshold: 1.
-  depth_threshold_low: 0.
-  depth_threshold_high: 0.
   altitude_threshold: 3000.
   terrain_slope_threshold: 1.
   forestry_ratio_threshold: 1.
