--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -13,7 +13,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-31T23:00']
+  slice: ['2015-01-01T00:00', '2015-12-31T23:00']
   resolution: 1
 
 # Space
@@ -29,10 +29,10 @@ res:
     comp: ['wind_offshore']
     no_siting: []
     siting: []
-    bus: ['pv_residential', 'pv_utility', 'wind_onshore']
+    bus: ['wind_onshore', 'pv_utility', 'pv_residential']
 
   # For strategy = max or comp
-  path: 'EU_country_off_201518_08'
+  path: 'EU_wide_off_2015_08'
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
@@ -79,7 +79,7 @@ dispatch:
 
 # Nuclear
 nuclear:
-  include: False
+  include: True
   use_ex_cap: True # Whether to include existing cap
   extendable: False
 
@@ -114,4 +114,4 @@ snsp:
 # Emissions
 co2_emissions:
   reference_year: 1990 # The only available point now.
-  mitigation_factor: 0.8
+  mitigation_factor: 0.0
