--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -14,7 +14,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-31T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
   resolution: 1
 
 # Space
@@ -26,14 +26,14 @@ res:
   include: True
   # Give which technology should be installed using each strategy
   strategies:
-    max: []
-    comp: ['wind_offshore']
+    max: ['wind_offshore']
+    comp: []
     no_siting: []
     siting: []
     bus: ['wind_onshore', 'pv_utility', 'pv_residential']
 
   # For strategy = max or comp
-  path: 'EU_country_off_2015_08'
+  path: 'EU_wide_off_2015_08'
   resite_nb: 0 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
