--- a/src/sizing/e-highways/config.yaml
+++ b/src/sizing/e-highways/config.yaml
@@ -17,7 +17,7 @@ time:
   resolution: 1
 
 # Space
-region: "EU"
+region: "CWE"
 add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
