--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -1,3 +1,6 @@
+# model
+keep_lp: False
+
 # solver
 solver: 'gurobi'
 solver_options:
@@ -14,7 +17,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T10:00']
   resolution: 1
 
 # Space
@@ -88,7 +91,6 @@ nuclear:
 battery:
   include: True
   type: "Li-ion"
-  max_hours: 4 # THIS IS FIXED. IF IT CHANGES, CAPEX MUST CHANGE ACCORDINGLY.
 
 # Hydro
 phs:
@@ -108,9 +110,12 @@ sto:
   extendable: False
   cyclic_sof: True
 
-snsp:
-  include: False
-  share: 0.65
+functionality:
+  which: "curtailment"
+  snsp:
+    share: 0.65
+  curtailment:
+    cost: 0.01 # 0.01 = 10 $/MWh
 
 # Emissions
 co2_emissions:
