--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -1,5 +1,5 @@
 # model
-keep_lp: True
+keep_lp: False
 
 # solver
 solver: 'gurobi'
@@ -9,7 +9,7 @@ solver_options:
     Method: 2
     BarHomogeneous: 1
     Crossover: 0
-    BarConvTol: 0.0001
+    BarConvTol: 1e-8
   cplex:
     solutiontype: 1
   cbc: 0
@@ -17,11 +17,11 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-10T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
   resolution: 1
 
 # Space
-region: "EU"
+region: "ES_PT"
 # add_offshore: False
 
 # RES
@@ -29,11 +29,11 @@ res:
   include: True
   # Give which technology should be installed using each strategy
   strategies:
-    max: ['wind_offshore']
+    max: []
     comp: []
     no_siting: []
     siting: []
-    bus: ['wind_onshore', 'pv_utility', 'pv_residential']
+    bus: ['wind_offshore', 'wind_onshore', 'pv_utility', 'pv_residential']
 
   # For strategy = max or comp
   path: 'EU_wide_off_2015_08'
@@ -83,7 +83,7 @@ dispatch:
 
 # Nuclear
 nuclear:
-  include: True
+  include: False
   use_ex_cap: True # Whether to include existing cap
   extendable: False
 
@@ -116,9 +116,9 @@ functionalities:
     share: 0.65
   curtailment:
     include: True
-    strategy: ['technical', 1.] # ['technical', 0.], ['technical', 1.], ['economic', 0.], ['economic', 9999.]
+    strategy: ['economic', 10.] # ['technical', 0.], ['technical', 1.], ['economic', 0.], ['economic', 9999.]
 
 # Emissions
 co2_emissions:
   reference_year: 1990 # The only available point now.
-  mitigation_factor: 0.0
+  mitigation_factor: 0.8
